# airsense

./: README.md
firmware/main/: CMakeLists.txt  config.h  main.cpp
firmware/main/assets/: registration.html
firmware/main/driver/apds9960/: apds9960.cpp  apds9960.h
firmware/main/driver/bme680/: bme680.cpp  bme680.h
firmware/main/driver/eink/: eink.cpp  eink.h  eink_command.cpp  eink_command.h
firmware/main/hal/digital_output_pin/: digital_output_pin.cpp  digital_output_pin.h
firmware/main/hal/dns_server/: dns_server.c  dns_server.h
firmware/main/hal/http_client/: http_client.cpp  http_client.h
firmware/main/hal/http_server/: http_server.cpp  http_server.h
firmware/main/hal/i2c/: i2c.cpp  i2c.h
firmware/main/hal/non_volatile_storage/: non_volatile_storage.cpp  non_volatile_storage.h
firmware/main/hal/registration_portal/: registration_portal.cpp  registration_portal.h
firmware/main/hal/timer/: timer.cpp  timer.h
firmware/main/hal/uart/: uart.cpp  uart.h
firmware/main/hal/wifi/: wifi.cpp  wifi.h
firmware/main/logger/: logger.cpp  logger.h
firmware/main/runtime/: runtime.cpp  runtime.h
firmware/main/service/authentication_service/: authentication_service.cpp  authentication_service.h
firmware/main/service/data_download_service/: data_download_service.cpp  data_download_service.h
firmware/main/service/data_service/: data_service.cpp  data_service.h
firmware/main/service/ui_service/: ui_service.cpp  ui_service.h
firmware/main/ui/home_ui/: home_ui.cpp  home_ui.h
firmware/main/ui/image_ui/: image_ui.cpp  image_ui.h
(+149 files in other folders)
